style.css
    /*main style*/

    * {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }

    html {
        font-size: 10px;
    }

    body {
        font-size: 1.2rem;
        font-family: 'Lato', sans-serif;
    }

    a {
        text-decoration: none;
        color: white;
    }

    h1 {
        font-size: 3rem;
    }

    h3 {
        font-size: 1.8rem;
    }

    .wrapper {
        position: relative;
        display: block;
        max-width: 1020px;
        padding: 0;
        margin: auto;
    }

    .hover, .hover a, .header__navigation li a:hover {
        color: #f06c64;
    }

    .colored {
        background: #f2f2f2;
    }

    header .header {
        height: 95px;
        background-color: #2d303a;
        border-bottom: 5px solid #323746;
    }

    .logo {
        position: relative;
        display: inline-block;
        padding: 35px 0 0 39px;
        font-size: 2.5rem;
        line-height: 1.8rem;
        letter-spacing: -0.05rem;
    }

    .logo h1 {
        font-size: 0.01rem;
    }

    .logo, .header__navigation, .navigation li {
        position: relative;
        display: inline-block;
        font-weight: 700;
        text-transform: uppercase;
    }

    .header__navigation {
        float: right;
        margin: 45px 40px 0 0;
        line-height: 0.8rem;
        letter-spacing: -0.12px;
    }

    .header__navigation .navigation li::after {
        padding: 0px 9px 0px 15px;
        content: '\2022';
        color: #494e62;
        font-size: 0.6rem;
    }

    .header__navigation .navigation li:last-child::after {
        content: '';
        padding: 0;
    }

    /* slider layout*/

    .slider .main__slider {
        position: relative;
        display: block;
        height: 600px;
        border-bottom: 6px solid #ea676b;
    }

    .slider .main__slider .slider__content {
        width: 100%;
        height: 100%;
        background-color: #f06c64;
    }

    .main__slider .slider-back, .main__slider .slider-next {
        position: absolute;
        cursor: pointer;
    }

    .slider-back {
        left: 42px;
        top: 280px;
    }

    .slider-next {
        right: 42px;
        top: 280px;
    }

    /* vertical */

    .vertical-block-phone .shadow {
        position: absolute;
        top: 53px;
        left: 112px;
    }

    .vertical-block-phone .vertical-phone {
        position: absolute;
        top: 53px;
        left: 112px;
    }

    .vertical-block-phone .vertical_bg {
        position: absolute;
        top: 115px;
        left: 123px;
    }

    /* horizontal */

    .horizontal-block-phone .shadow {
        position: absolute;
        transform: rotateY(180deg) rotate(90deg);
        top: 52px;
        right: 232px;
    }

    .horizontal-block-phone .horizontal-phone {
        position: absolute;
        transform: rotate(90deg);
        top: 52px;
        right: 258px;
    }

    .horizontal-block-phone .horizontal_bg {
        position: absolute;
        top: 185px;
        right: 199px;
    }

    /* services */

    .services {
        color: #666d89;
        height: 500px;
    }

    .layout-3-column, .column {
        position: relative;
        width: 100%;
        display: flex;
        justify-content: space-between;
        padding-top: 13px;
    }

    .column {
        width: 300px;
        height: 110px;
    }

    .our-services h1 {
        padding-left: 40px;
    }

    .our-services p {
        font-size: 1.8rem;
        padding: 17px 40px;
        line-height: 3rem;
        text-align: justify;
    }

    .wrapper-services {
        background-color: #f2f2f2;
        display: flex;
        flex-direction: column;
        padding-top: 60px;
        border-bottom: 6px solid white;
        height: 505px;
    }

    .layout-3-2-column {
        width: 940px;
        margin: 0 auto;
    }

    .services-ico img {
        padding: 4px 20px 0px 1px;
    }

    .services-description p {
        line-height: 22px;
        margin-top: 8px;
        text-align: justify;
    }

    /*portfolio*/

    .portfolio-wrap {
        position: relative;
        overflow: hidden;
        width: 100%;
        height: 869px;
        background: #2d303a;
        color: #767e9e;
        border-bottom: 5px solid #323746;
    }

    .porfolio .portfolio-content {
        max-width: 960px;
        padding: 0;
        margin: auto;
    }

    .porfolio .portfolio-content .portfolio-decription {
        margin: 10px;
    }

    .porfolio .portfolio-content .portfolio-decription h1 {
        padding-top: 50px;
        letter-spacing: 0.02rem;
    }

    .porfolio .portfolio-content .portfolio-decription p {
        padding-top: 22px;
        font-size: 1.8rem;
        font-weight: 300;
    }

    .porfolio .portfolio-tags {
        margin: 18px 0 13px 11px;
    }

    .porfolio .portfolio-tags .tag {
        border: 1px solid #767e9e;
        border-radius: 4px;
        margin-right: 7px;
        padding: 3px 7px;
        font-weight: 300;
        cursor: pointer;
    }

    .porfolio .portfolio-tags .tag-selected, .porfolio .portfolio-tags .tag:hover {
        color: white;
        border: 1px solid white;
    }

    .portfolio-box {
        height: 611px;
        overflow: hidden;
    }

    .portfolio-box .layout-4-column {
        display: flex;
        justify-content: center;
    }

    .portfolio-box .layout-4-column .portfolio-img {
        margin: 10px 10px;
        width: 220px;
        height: 187px;
    }

    /*About Us*/

    .about-us-wrap {
        position: relative;
        width: 100%;
        height: 734px;
        border-bottom: 6px solid white;
        background: #f2f2f2;
    }

    .about-us .about-us-content {
        max-width: 960px;
        padding: 0;
        margin: auto;
    }

    .about-us-content .about-us-decription {
        padding: 10px;
    }

    .about-us-content .about-us-decription h1 {
        padding-top: 49px;
        letter-spacing: 0.02rem;
    }

    .about-us-content .about-us-decription p {
        padding: 18px 0px 11px 0;
        font-size: 1.8rem;
        font-weight: 300;
        line-height: 3rem;
        text-align: justify;
    }

    .about-us .about-us-content .layout-3-column {
        display: flex;
        justify-content: center;
    }

    .about-us .about-us-content .layout-3-column .about-us-pro {
        margin: 10px 10px;
    }

    .about-us-pro .team-img {
        width: 300px;
        height: 300px;
    }

    .about-us-pro .team-description {
        padding-top: 15px;
    }

    .about-us-pro .team-description h3 {
        padding-bottom: 10px;
        width: 300px;
        overflow: hidden;
        white-space: nowrap;
    }

    .about-us-pro .team-description p {
        line-height: 2rem;
        text-align: justify;
        padding-bottom: 24px;
    }

    .about-us .about-us-social a {
        padding-right: 6px;
    }

    /*get-quote*/

    .get-quote .wrapper {
        background: #f06c64;
        height: 654px;
        border-bottom: 5px solid #f06c64;
    }

    .get-quote .wrapper .wrapper-quote, footer .wrapper-footer {
        max-width: 960px;
        padding: 0;
        margin: auto;
        color: #f0d8d9;
    }

    .get-quote .quote-description {
        padding: 10px;
    }

    .get-quote .wrapper-quote .quote-description h1 {
        padding-top: 50px;
        letter-spacing: 0.02rem;
    }

    .get-quote .wrapper-quote .quote-description p {
        padding-top: 17px;
        font-size: 1.8rem;
        font-weight: 300;
        line-height: 3rem;
        letter-spacing: 0.001rem;
        text-align: justify;
    }

    .get-quote .wrapper-quote .quote-form {
        margin: 34px 10px;
        display: flex;
        flex-direction: column;
    }

    .get-quote .wrapper-quote .quote-form .quote-form-field {
        margin-bottom: 16px;
        padding-left: 14px;
        height: 38px;
        width: 619px;
        border-radius: 5px;
        border: none;
        background: #d6564f;
        font-size: 1.2rem;
        color: white;
    }

    .get-quote .wrapper-quote .quote-form .quote-form-field:focus {
        border-radius: 5px;
        border: 2px solid #f48c8f;
    }

    .get-quote .wrapper-quote .quote-form .quote-form-field::placeholder {
        color: #f48c8f;
        font-family: 'Lato', sans-serif;
        font-weight: 300;
    }

    .get-quote .wrapper-quote .quote-form .quote-form-textarea {
        height: 202px;
        resize: none;
        padding-top: 11px;
        font-weight: 300;
    }

    .wrapper-form {
        display: flex;
    }

    .get-quote .wrapper-form .contact-info {
        margin: 10px;
    }

    .get-quote .wrapper-form .contact-info .contact-description h3 {
        padding-top: 22px;
    }

    .quote-form button {
        position: absolute;
        bottom: 10px;
        right: 360px;
        padding: 10px;
        width: 84px;
        color: #f0d8d9;
        background-color: #d6564f;
        border: 1px solid #d6564f;
        ;
        border-radius: 5px;
    }

    .get-quote .wrapper-form .contact-info .contact-description p {
        padding-top: 8px;
        line-height: 2.2rem;
        font-weight: 300;
        text-align: justify;
    }

    .contact-info .contact-link ul {
        padding-top: 24px;
        padding-left: 5px;
        list-style-type: none;
    }

    .contact-info .contact-link li {
        padding-bottom: 6px;
    }

    .contact-info .contact-link a {
        color: #f0d8d9;
    }

    .contact-info .contact-link img {
        padding-right: 12px;
    }

    /*footer*/

    footer .wrapper {
        height: 76px;
        background: #2d303a;
    }

    footer .copyright {
        color: #666d89;
    }

    footer .copyright h4 {
        padding: 30px 0 0 11px;
    }

    footer .about-us-social a {
        padding: 3px;
    }

    footer .about-us-social {
        position: absolute;
        right: 36px;
        bottom: 19px;
    }

